--- a/astrarre-util-v0/build.gradle
+++ b/astrarre-util-v0/build.gradle
@@ -1,6 +1,4 @@
-
 dependencies {
-    modCompileOnly ("net.fabricmc.fabric-api:fabric-api:$fabric_version") {
-        exclude module: 'fabric-loader'
-    }
+    implementation minecraft
+    
 }
