--- a/astrarre-components-v0/build.gradle
+++ b/astrarre-components-v0/build.gradle
@@ -2,3 +2,9 @@ sourceSets {
     generator {
     }
 }
+
+dependencies {
+    implementation minecraft
+    
+    api project(":astrarre-itemview-v0")
+}
