--- a/astrarre-gui-v1/build.gradle
+++ b/astrarre-gui-v1/build.gradle
@@ -1,7 +1,3 @@
-loom {
-    accessWidener = file("$projectDir/src/main/resources/astrarre-gui.accesswidener")
-}
-
 sourceSets {
     testmod {
         java {
@@ -11,10 +7,14 @@ sourceSets {
 }
 
 dependencies {
-    testmodImplementation project(":astrarre-recipe-v0")
-    testmodImplementation project(":astrarre-transfer-v0")
-    modImplementation ("me.shedaniel:RoughlyEnoughItems-fabric:6.0.279-alpha") {
-        exclude module: 'fabric-api'
-        exclude module: 'fabric-loader'
+    implementation ag.accessWidener(minecraft) {
+        accessWidener(files("$projectDir/src/main/resources/astrarre-gui.accesswidener"))
     }
+
+    testmodImplementation project(":astrarre-recipe-v0")
+    implementation reiImpl
+
+    api project(":astrarre-hash-v0")
+    api project(":astrarre-access-v0")
+    api project(":astrarre-rendering-v1")
 }
