--- a/settings.gradle
+++ b/settings.gradle
@@ -1,25 +1,36 @@
 pluginManagement {
     repositories {
-        jcenter()
         gradlePluginPortal()
-        maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
-        }
+        mavenCentral()
         mavenLocal()
+        maven {
+            name = "FabricMC"
+            url = uri("https://maven.fabricmc.net/")
+        }
+        maven {
+            name = "HalfOf2"
+            url = uri("https://storage.googleapis.com/devan-maven/")
+        }
+        maven {
+            name = "MinecraftForge"
+            url = uri("https://files.minecraftforge.net/maven")
+        }
+        maven {
+            url = uri("https://maven.hydos.cf/releases")
+        }
     }
 }
 
 rootProject.name = "astrarre"
 include 'astrarre-util-v0'
 include 'astrarre-itemview-v0'
-include 'astrarre-transfer-v0'
+//include 'astrarre-transfer-v0'
 include 'astrarre-access-v0'
 include 'astrarre-recipe-v0'
-include 'astrarre-transfer-compat-v0'
+//include 'astrarre-transfer-compat-v0'
 include 'astrarre-components-v0'
-include 'astrarre-event-core-v0'
-include 'astrarre-event-entity-v0'
+//include 'astrarre-event-core-v0'
+//include 'astrarre-event-entity-v0'
 include 'astrarre-gui-v1'
 include 'astrarre-rendering-v1'
 include 'astrarre-hash-v0'
