update amalg, remove mixin annotation processor
Signed-off-by: Devan-Kerman <dev.sel20@gmail.com>

--- a/astrarre-components-v0/build.gradle
+++ b/astrarre-components-v0/build.gradle
@@ -4,7 +4,7 @@ sourceSets {
 }
 
 dependencies {
-    implementation minecraft
+    minecraftConfig minecraft
     
     api project(":astrarre-itemview-v0")
 }
