--- a/astrarre-gui-v1/build.gradle
+++ b/astrarre-gui-v1/build.gradle
@@ -7,7 +7,7 @@ sourceSets {
 }
 
 dependencies {
-    implementation ag.accessWidener(minecraft) {
+    minecraftConfig ag.accessWidener(minecraft) {
         accessWidener(files("$projectDir/src/main/resources/astrarre-gui.accesswidener"))
     }
 
