--- a/settings.gradle
+++ b/settings.gradle
@@ -26,7 +26,7 @@ include 'astrarre-util-v0'
 include 'astrarre-itemview-v0'
 //include 'astrarre-transfer-v0'
 include 'astrarre-access-v0'
-include 'astrarre-recipe-v0'
+include 'astrarre-resources-v0'
 //include 'astrarre-transfer-compat-v0'
 include 'astrarre-components-v0'
 //include 'astrarre-event-core-v0'
